# ModelForge

./: .gitignore  .gitlab-ci.yml  README.md
.gitlab/: README.md
aegisml/: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
aegisml/app/: __main__.py  config.py  dependencies.py  deployment.py  error_handlers.py  exceptions.py  main.py
aegisml/app/api/: health.py  predict.py  routes.py
aegisml/app/inference/: __init__.py  classifier.py
aegisml/app/observability/: __init__.py  telemetry.py
aegisml/app/schemas/: __init__.py  errors.py  health.py  predict.py
aegisml/docker/: Dockerfile
aegisml/docs/: application-structure.md  architecture.md  engineering.md  production-readiness.md  roadmap.md  service.md
aegisml/examples/: enriched-finding.example.json  policy-check-artifact-layout.txt  policy-check-review-result-fail.example.json  policy-check-review-result.example.json  policy-finding-enriched.example.json
aegisml/k8s/argo/: application-example.yaml
aegisml/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
aegisml/knowledge_base/: README.md
aegisml/observability/: README.md  grafana-dashboard.json  prometheus.yaml
aegisml/policies/: policy-config.yaml
aegisml/scripts/: enrich_review_result.py  ingest_knowledge_base.py  policy_agent_gate.py  policy_check.py  run-local.sh  smoke-test.sh
aegisml/tests/: conftest.py  test_health.py  test_inference_contract.py  test_ingest_kb.py  test_model.py  test_model_artifact.py  test_predict.py  test_retrieval.py  test_telemetry.py
(+33 files in other folders)
