[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisml"
version = "0.2.0"
description = "AegisML: FastAPI inference service, CI policy checks, Kubernetes manifests"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0,<1.0",
    "uvicorn[standard]>=0.27.0,<1.0",
    "pydantic>=2.0,<3.0",
    "numpy>=1.24.0,<3.0",
    "scikit-learn>=1.3.0,<2.0",
    "prometheus-client>=0.19.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.26.0,<1.0",
    "pytest>=8.0.0,<9.0",
    "pytest-cov>=4.1.0,<7.0",
    "ruff>=0.8.0,<1.0",
    "pip-audit>=2.6.0,<3.0",
    "pyyaml>=6.0,<7.0",
]
otel = [
    "opentelemetry-api>=1.22.0,<2.0",
    "opentelemetry-sdk>=1.22.0,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0,<1.0",
    "opentelemetry-exporter-otlp>=1.22.0,<2.0",
]
retrieval = [
    "chromadb>=0.4.0,<1.0",
]

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["app*", "retrieval*"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["app", "src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
branch = true
source = ["app", "src/retrieval"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 0
show_missing = true
